Tue Mar 12 15:00:41 2002  George Lebl <jirka@5z.com>

	* Release 2.2.5.5

Tue Feb 19 17:28:11 2002  George Lebl <jirka@5z.com>

	* gui/gdmconfig.glade: fix typo

	* gui/gdmlogin.c: increase welcome string limit to 2048

	* daemon/verify-pam.c: treat USER_UNKNOWN just like AUTH_ERR

2002-02-05  Abel Cheung  <maddog@linux.org.hk>

	* configure.in (ALL_LINGUAS): zh_CN.GB2312 -> zh_CN

2002-02-04  Karsten Weiss  <knweiss@gmx.de>

	* gui/gdmconfig-strings.c: Fixed a typo.

	* gui/gdmlanguages.c: s/Azerbaidjani/Azerbaijani/

	* config/gettextfoo.h: Fixed a typo. 
	* daemon/verify-pam.c: Ditto.
	* daemon/gdm.c: Ditto.
	* gui/gdmconfig-strings.c: Ditto. 

2002-02-01  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* docs/gdmconfig/eu/figures: updated two images
	* gui/gdmlanguages.c: added some more languages for the menu
	  and corrected the Hebrew locale name ('iw' lang code has been
	  superseeded with 'he')

2002-01-31  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in, docs/Makefile.am, docs/gdmconfig/Makefile.am,
	  docs/eu/, docs/gdmconfig/eu/ : Added Basque help files 

2002-02-01  Kjartan Maraas  <kmaraas@gnome.org>

	* daemon/gdm.c: Fix a typo.
	* daemon/verify-pam.c: Same.
	
2002-01-21  Alexander Shopov  <al_shopov@web.bg>

	* configure.in (ALL_LINGUAS): Added "bg".

2002-01-04  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in (ALL_LINGUAS): Added "eu".

Mon Dec 31 18:55:07 2001  George Lebl <jirka@5z.com>

	* Release 2.2.5.4

Mon Dec 31 18:54:25 2001  George Lebl <jirka@5z.com>

	* configure.in, NEWS: raise version

	* daemon/slave.c: set egid to the correct value before we do setuid
	  to avoid running the session with gdm group privilages.  (Note
	  that all session files run bash and thus drop those, but this
	  is a problem for the failsafes)

	* gui/gdmlogin.c: Make PositionX and PositionY follow the standard
	  X geometry behaviour where negative values mean position from
	  lower/right edge
