@@ -109,7 +109,6 @@ extern gboolean GdmKillInitClients;
 extern gint GdmPingInterval;
 extern gint GdmRetryDelay;
 extern gboolean GdmAllowRoot;
-extern sigset_t sysmask;
 extern gchar *GdmGlobalFaceDir;
 extern gboolean GdmBrowser;
 extern gboolean GdmDebug;
@@ -1819,6 +1818,7 @@ session_child_run (struct passwd *pwent,
 		   gboolean sessoptok,
 		   gboolean savegnomesess)
 {
+	sigset_t mask;
 	int i;
 	char *sesspath, *sessexec;
 	gboolean need_config_sync = FALSE;
@@ -1921,8 +1921,9 @@ session_child_run (struct passwd *pwent,
 	open ("/dev/null", O_RDWR); /* open stdout - fd 1 */
 	open ("/dev/null", O_RDWR); /* open stderr - fd 2 */
 	
-	/* Restore sigmask inherited from init */
-	sigprocmask (SIG_SETMASK, &sysmask, NULL);
+	/* Restore sigmask to 0 */
+	sigemptyset (&mask);
+	sigprocmask (SIG_SETMASK, &mask, NULL);
 
 	/* If "Gnome Chooser" is still set as a session,
 	 * just change that to "Gnome", since "Gnome Chooser" is a
