@@ -1,3 +1,8 @@
+Fri Apr 12 16:00:30 2002  George Lebl <jirka@5z.com>
+
+	* daemon/slave.c: unblock all signals rather then use the inherited
+	  sysmask.  Should fix #77880
+
 Tue Mar 12 15:00:41 2002  George Lebl <jirka@5z.com>
 
 	* Release 2.2.5.5
